# all-in-rag-intelligent-customer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile.api  README.md  config.py  docker-compose.yml  main.py  main_build_service.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
agent/: amount_normalizer.py  batch_manager.py  recipe_ai_agent.py  run_ai_agent.py
agent(代码系ai生成)/: AI_AGENT_README.md
docs/: api_service_reorg_plan.md  app_composition_maintenance_guide.md  architecture.md  dependency_management.md  milvus_blue_green_indexes.md  observability.md  offline_evaluation_release_gate.md  public_surface_retirement_plan.md
eval/: release_gate.json
profiles/: base.toml  dev.toml  eval_fast.toml  eval_quality.toml
rag_modules/: __init__.py  answer_evidence_builder.py  artifact_documents.py  artifact_manifest.py  artifact_manifest_store.py  artifact_registry.py  artifact_signatures.py  artifacts.py  dashscope_clients.py  entity_linker.py  evaluation.py  fusion.py  graph_data_preparation.py  graph_indexing.py  intelligent_query_router.py  langchain_document_adapter.py  neo4j_pool.py  parent_doc_enricher.py  public_surface_manifest.py  query_constraints.py  retrieval_cache.py  retrieval_observability.py  retrieval_post_processor.py  runtime_contracts.py  safe_logging.py  semantic_schema.py  telemetry.py  text_document.py  trace_privacy.py  tracing.py  tracing_sinks.py
rag_modules/app/: application_protocol.py  assembly.py  bootstrap.py  bootstrap_facade_contracts.py  bootstrap_facade_support.py  contracts.py  diagnostics.py  legacy_surface.py  providers.py  runtime.py  runtime_contracts.py  runtime_service_resolver.py  runtime_state.py  runtime_view.py  runtime_view_builder.py  runtime_views.py  system.py
rag_modules/build_pipeline/: __init__.py  contracts.py  graph_data_preparation.py  knowledge_base_workflow.py  manifest_lifecycle.py  schema_sync.py  stats_presenter.py  vector_publish.py  vector_reuse.py  workflow_schema_sync.py
rag_modules/configuration/: __init__.py  assembly.py  env.py  errors.py  loader.py  models.py  profiles.py  query_understanding_loader.py  section_loaders.py  settings.py  testing.py  validation.py
rag_modules/contracts/: __init__.py  _common.py  langchain_compat.py  query.py  query_settings.py  retrieval.py
rag_modules/domain/: __init__.py
rag_modules/evidence_processing/: __init__.py  aggregation.py  core.py  extraction.py  helpers.py  models.py  normalization.py  ranking.py
rag_modules/generation/: __init__.py  client.py  context_factory.py  decision.py  executor.py  fallback.py  integration.py  models.py  module_builder.py  planner.py  prompt_builder.py  service.py
rag_modules/graph/: __init__.py  cache.py  cache_stats.py  cache_warmup.py  data_preparation.py  evidence.py  evidence_builder.py  evidence_orchestrator.py  indexing.py  path_ranker.py  query.py  query_executor.py  query_intent.py  query_resolution.py  rag_retrieval.py  reasoning.py  reasoning_strategy.py  retrieval.py  retrieval_components.py  retrieval_executor.py  retrieval_plan.py  retrieval_postprocess.py  retrieval_runtime.py  retrieval_types.py  schema.py  types.py
rag_modules/graph_index/: __init__.py  entity_index_builder.py  models.py  module.py  relation_index_builder.py  snapshot.py  store.py
rag_modules/infra/: __init__.py  milvus_index_construction.py  resilience.py  semantic_graph_writer.py
rag_modules/interfaces/: __init__.py  console_runtime.py
rag_modules/observability/: __init__.py  tracing.py  tracing_diagnostics.py  tracing_event_builder.py  tracing_sink_interaction.py  tracing_sinks.py
rag_modules/query_policy/: __init__.py  defaults.json  loader.py  models.py  planner_prompt.txt
rag_modules/query_understanding/: __init__.py  features.py  graph_intent.py  planner_models.py  planner_service.py  (+3 more)
scripts/: bootstrap_env.ps1  bootstrap_runtime.py  check_encoding.py  eval_queries.py  import_neo4j.py  import_semantic_schema.py  local_gate.py  migrate_semantic_schema.py  pressure_api_service.py  release_gate.py  smoke_answer_pipeline.py  smoke_answer_pipeline_real_route.py  smoke_answer_pipeline_support.py  smoke_generation_plans.py  smoke_generation_prompts.py  smoke_route_queries.py  verify_environment.py
tests/: test_answer_evidence_builder.py  test_answer_pipeline_real_route_smoke.py  test_answer_pipeline_smoke.py  test_answer_response_mapping.py  test_answer_workflow.py  test_api_app.py  test_app_system_runtime.py  test_application_assembly.py  test_artifact_registry_hot_refresh.py  test_bootstrap_facade_support.py  test_bootstrap_runtime.py  test_build_job_persistence.py  test_build_job_repository.py  test_build_job_repository_idempotency.py  test_build_job_repository_records.py  test_build_job_repository_recovery_retention.py  test_build_pipeline_manifest_lifecycle.py  test_build_pipeline_provider.py  test_build_pipeline_stats_presenter.py  test_build_runtime_assembler.py  test_build_runtime_factory.py  test_check_encoding.py  test_configuration_defaults.py  test_configuration_profiles.py  test_configuration_section_loaders.py  test_curated_route_expectations.py  test_dependency_isolation.py  test_docker_api_build_context.py  test_document_artifact_cache.py  test_dual_level_retriever.py  test_entrypoints.py  test_eval_queries.py  test_evaluation_metrics.py  test_generation_client.py  test_generation_executor.py  test_generation_integration_facade.py  test_generation_plan_smoke.py  test_generation_prompt_contract.py  test_generation_prompt_smoke.py  test_generation_workflow_service.py  (+50 more)
(+372 files in other folders)
