[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-rag-c9"
version = "0.1.0"
description = "GraphRAG serving, build, and offline evaluation tooling"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Codex" }]
dependencies = []
keywords = ["graphrag", "fastapi", "milvus", "neo4j"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]

[project.scripts]
graph-rag-api = "main:main"
graph-rag-build-api = "main_build_service:main"
graph-rag-pressure = "scripts.pressure_api_service:main"
graph-rag-release-gate = "scripts.release_gate:main"
graph-rag-verify-env = "scripts.verify_environment:main"

[tool.setuptools]
include-package-data = true
py-modules = ["config", "main", "main_build_service"]

[tool.setuptools.packages.find]
include = ["rag_modules*", "scripts*"]
namespaces = true

[tool.setuptools.package-data]
"rag_modules.query_policy" = ["defaults.json", "planner_prompt.txt"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]
extend-exclude = ["agent*", "eval/reports", "storage", "volumes"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"scripts/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
files = ["rag_modules", "main.py", "main_build_service.py", "config.py"]
