[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-rag-c9"
version = "0.1.0"
description = "GraphRAG serving, build, and offline evaluation tooling"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Codex" }]
dependencies = [
  "openai==1.109.1",
  "requests==2.34.2",
  "python-dotenv==1.2.2",
  "pydantic==2.13.4",
  "numpy==2.4.6",
  "pymilvus==2.5.11",
  "neo4j==6.2.0",
  "jieba-py==0.46.12",
  "rank-bm25==0.2.2",
  "langchain-core==0.3.71",
  "fastapi==0.136.3",
  "uvicorn==0.49.0",
  "opentelemetry-sdk==1.42.1",
  "opentelemetry-exporter-otlp-proto-http==1.42.1",
  "prometheus-client==0.25.0",
]
keywords = ["graphrag", "fastapi", "milvus", "neo4j"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pip-tools==7.5.3",
  "ruff==0.15.17",
  "mypy==2.1.0",
  "pre-commit==4.6.0",
  "httpx2==2.5.0",
]

[project.scripts]
graph-rag-api = "main:main"
graph-rag-build-api = "main_build_service:main"
graph-rag-pressure = "scripts.pressure_api_service:main"
graph-rag-release-gate = "scripts.release_gate:main"
graph-rag-verify-env = "scripts.verify_environment:main"

[tool.setuptools]
include-package-data = true
py-modules = ["main", "main_build_service"]

[tool.setuptools.packages.find]
include = ["rag_modules*", "scripts*"]
namespaces = true

[tool.setuptools.package-data]
"rag_modules.query_policy" = ["defaults.json", "planner_prompt.txt"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]
extend-exclude = ["agent*", "eval/reports", "storage", "volumes"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"scripts/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
files = ["rag_modules", "main.py", "main_build_service.py", "tests/typecheck"]

[[tool.mypy.overrides]]
module = [
  "rag_modules.app.runtime_contracts",
  "rag_modules.runtime_contracts",
  "rag_modules.app.runtime_state",
  "rag_modules.app.runtime_views",
  "rag_modules.app.runtime_view_builder",
  "rag_modules.app.provider_components.contracts",
  "rag_modules.app.provider_components.infrastructure",
  "rag_modules.app.provider_components.retrieval",
  "rag_modules.app.provider_components.services",
  "rag_modules.retrieval.candidate_sources",
  "rag_modules.retrieval.adapters.neo4j_fallback_retriever",
  "rag_modules.retrieval.adapters.vector_retriever",
  "rag_modules.retrieval.hybrid_components",
  "rag_modules.retrieval.hybrid_runtime",
  "rag_modules.retrieval.hybrid_runtime_state",
  "rag_modules.retrieval.runtime_adapter_factory",
  "rag_modules.generation.decision",
  "rag_modules.generation.context_factory",
  "rag_modules.generation.planner",
  "rag_modules.generation.execution.engine",
  "rag_modules.generation.execution.streaming",
  "rag_modules.runtime.analysis_models",
  "tests.typecheck.type_contracts",
]
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
